# useful-tools

./: .gitignore  Pipfile  README.md  convert_ts_2_mp4.py  crop_video_file.py  cut_kill.py  desktop.ini  id_file.txt  make_huge_file.c  pyproject.toml  temp.txt  trim_video_file.py  video-editor.py  youtube-download.py  youtube-download.spec
anki/: add_mp3.py
anki/describe-disease/: 1_init.sh  2_pdf_to_images.sh  3_classify_pages.py  3_extract_diseases.py  3_filter_problem_part.py  4_analyze_page.py  4_extract_table.py  5_find_start_and_end.py  6_extract_text.py  7_create_anki_db.py  7_write_summary.py  8_rename_images.py  9_create_anki_db.py  TODO.md  config.toml  main.py  prompt.txt  pyproject.toml  util.py
anki/past-exam-to-anki/: 1_input2text.py  2_text2anki.py  clean.sh  config.toml  img2text.py  input2text.py  pyproject.toml  text2anki.py
anki/past-exam-to-anki/util/: config.py  openai_wrapper.py
create-caption/: Pipfile  create-caption.py
ffmpeg-overwrap/: converter.py  pickle_converted.pickle  pickle_path.pickle
find_teachers_market_case/: pyproject.toml
images-to-anki/: img2text.py  pyproject.toml  text2anki.py
past-exam-to-anki/: img2text.py  text2anki.py
photos-metadata-restore/: 1_copy_files.py  2_filter_missing_metadata.py  3_find_metadata_file.py  4_extract_metadata_file.py  4_restore_metadata.py  5_describe_result.py  6_restore_metadata.py  README.md  clean.sh  config.toml  filter_results.txt  main.py  pyproject.toml  todo.md
photos-metadata-restore/output/: metadata.json  metadata_location.json  pair.json  result.txt
photos-metadata-restore/utils/: __init__.py  exif_utils.py
quiz-automation/: ReadMe.md  coordinate.toml  display.py  main.py
teacher/: example.html  pyproject.toml  teachers-market.py
uncategorized/: convert2mp3.bat  convert_video_file_2_mp4.py  crop_video_file.py  drive-download.py  encode.bat  make_huge_file.py  trim_music_file.py  trim_video_file.py  video-editor.py  youtube-download.py
video-editor/: controller.py  main.py  video.py  view.py
web_of_science/: config.toml  main.py  position.py  reset.py
