[project]
name = "photos-metadata-restore"
version = "0.1.0"
description = "Restore metadata for photos from Google Takeout"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "loguru>=0.7.0",
    "alive-progress>=3.1.0",
    "pillow>=10.0.0",
    "exifread>=3.0.0",
    "piexif>=1.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88